# bill-management-mongo-rag

./: .env  README.md  app.py  dev.env  main.py  pyproject.toml  query-plan-example1.json  query-plan-validation.json  query_templates_  requirements.txt  setup.ipynb
backend/: app copy.py  app.py  check_db.py  helper.py  llm_query.py  main.py  migrate_dates.py  pdf.py
backend/chains/: bill_extract_chain.py
backend/db/: indexes.py  mongodb.py
backend/schemas/: bill_extract.py  ingest.py
backend/services/: bill_service.py  file_loader.py  ingest_service.py  upload_service.py  vector_service.py
backend/templates/: bill_extract_schema.py  query_templates.py  resolve_time_range_to_mongo.py  safe_time.py  time_range.py  time_range_resolver.py  time_resolver.py
backend/utils/: file_utils.py  ocr_utils.py
backend/vector_store/: chroma.sqlite3
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/bills/: route.ts
frontend/app/api/download/: route.ts
frontend/app/api/ingest/confirm/: route.ts
frontend/app/api/query/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/bills/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: Navbar.tsx
frontend/app/upload/: page.tsx
frontend/uploads/: PCRF_MoGLSD_GROW-MIS_v1.7.xlsx
